Description:[fix] hicollie build
Signed-off-by: stesen <stesen1988@outlook.com>
Change-Id: I70175e6531d617117c5c201ca57acdc929536fcf

--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -42,7 +42,7 @@ ohos_unittest("XCollieUnitTest") {
     "//utils/native/base:utils",
   ]
   external_deps = [
-    "hicollie:libhicollie",
+    "hicollie_native:libhicollie",
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
   ]
