--- a/interfaces/native/innerkits/BUILD.gn
+++ b/interfaces/native/innerkits/BUILD.gn
@@ -22,6 +22,6 @@ ohos_shared_library("libhicollie") {
   public_configs = [ ":libhicollie_pub_config" ]
   deps = [ "//base/hiviewdfx/hicollie/frameworks/native:libhicollie_source" ]
   external_deps = [ "hilog_native:libhilog" ]
-  part_name = "hicollie"
+  part_name = "hicollie_native"
   subsystem_name = "hiviewdfx"
 }
