--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -38,7 +38,7 @@ ohos_source_set("libhicollie_source") {
   configs = [ ":hicollie_include" ]
 
   external_deps = [
-    "appexecfwk_standard:libeventhandler",
+    "eventhandler:libeventhandler",
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
   ]
