添加编译单元指定部件名
Signed-off-by: yudechen <chenyude@huawei.com>
Change-Id: I9f5580d999ddac182e56a479dc5540be875833d7

--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -44,6 +44,9 @@ ohos_source_set("libhicollie_source") {
   ]
 
   deps = [ "//utils/native/base:utils" ]
+
+  part_name = "hicollie_native"
+  subsystem_name = "hiviewdfx"
 }
 
 group("libhicollie") {
