change utils path
Signed-off-by: hongtao <hongtao11@huawei.com>
Change-Id: Id3604ead293f78caccd8c9a0a8e27d74909b62d0

--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -18,7 +18,7 @@ config("hicollie_include") {
   include_dirs = [
     ".",
     "${hicollie_part_path}/interfaces/native/innerkits/include/xcollie",
-    "//utils/native/base/include",
+    "//commonlibrary/c_utils/base/include",
   ]
   if (is_ohos) {
     cflags_cc = [ "-D__XCOLLIE_OHOS__" ]
@@ -37,12 +37,11 @@ ohos_source_set("libhicollie_source") {
   configs = [ ":hicollie_include" ]
 
   external_deps = [
+    "c_utils:utils",
     "eventhandler:libeventhandler",
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
   ]
-
-  deps = [ "//utils/native/base:utils" ]
 
   part_name = "hicollie_native"
   subsystem_name = "hiviewdfx"
