--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -31,6 +31,7 @@ ohos_source_set("libhicollie_source") {
     "timer_ring.cpp",
     "watchdog.cpp",
     "watchdog_inner.cpp",
+    "watchdog_task.cpp",
     "xcollie.cpp",
     "xcollie_inner.cpp",
   ]
