--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -46,11 +46,28 @@ ohos_unittest("XCollieUnitTest") {
   ]
 }
 
+ohos_unittest("WatchdogUnitTest") {
+  module_out_path = module_output_path
+  sources = [ "watchdog_interface_test.cpp" ]
+
+  configs = [ ":module_private_config" ]
+
+  deps = [ "//third_party/googletest:gtest_main" ]
+  external_deps = [
+    "c_utils:utils",
+    "eventhandler:libeventhandler",
+    "hicollie_native:libhicollie",
+    "hilog_native:libhilog",
+    "hisysevent_native:libhisysevent",
+  ]
+}
+
 ###############################################################################
 group("unittest") {
   testonly = true
   deps = [
     # deps file
+    ":WatchdogUnitTest",
     ":XCollieUnitTest",
   ]
 }
