--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -34,6 +34,7 @@ ohos_source_set("libhicollie_source") {
     "watchdog_task.cpp",
     "xcollie.cpp",
     "xcollie_inner.cpp",
+    "xcollie_utils.cpp",
   ]
   configs = [ ":hicollie_include" ]
 
