--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -17,10 +17,25 @@ SERVICE_TIMEOUT:
   __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: timer timeout}
   PID: {type: INT32, desc: pid}
   TGID: {type: INT32, desc: gid}
+  UID: {type: INT32, desc: uid}
+  MODULE_NAME: {type: STRING, desc: package name}
+  PROCESS_NAME: {type: STRING, desc: process name}
   MSG: {type: STRING, desc: event message}
 
 SERVICE_BLOCK:
   __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: watchdog timeout}
   PID: {type: INT32, desc: pid}
   TGID: {type: INT32, desc: gid}
+  UID: {type: INT32, desc: uid}
+  MODULE_NAME: {type: STRING, desc: package name}
+  PROCESS_NAME: {type: STRING, desc: process name}
+  MSG: {type: STRING, desc: event message}
+
+SERVICE_WARNING:
+  __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: watchdog timeout}
+  PID: {type: INT32, desc: pid}
+  TGID: {type: INT32, desc: gid}
+  UID: {type: INT32, desc: uid}
+  MODULE_NAME: {type: STRING, desc: package name}
+  PROCESS_NAME: {type: STRING, desc: process name}
   MSG: {type: STRING, desc: event message}
