fixed 7397d78 from https://gitee.com/mgce/hiviewdfx_hicollie/pulls/36 add TDD test case
Signed-off-by: mashuang <mashuang13@huawei.com>
Signed-off-by: mgceshuang <mashuang13@huawei.com>

--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -86,6 +86,48 @@ ohos_unittest("HandlerCheckerTest") {
   ]
 }
 
+ohos_unittest("XCollieCheckerInterfaceUnitTest") {
+  module_out_path = module_output_path
+  sources = [
+    "${hicollie_part_path}/frameworks/native/test/xcollie_checker_test.cpp",
+    "xcollie_checker_interface_test.cpp",
+  ]
+
+  configs = [ ":module_private_config" ]
+
+  deps = [ "//third_party/googletest:gtest_main" ]
+  external_deps = [
+    "c_utils:utils",
+    "hicollie_native:libhicollie",
+    "hilog_native:libhilog",
+  ]
+}
+
+ohos_unittest("XCollieInnerTestUnitTest") {
+  module_out_path = module_output_path
+  include_dirs = [
+    ".",
+    "${hicollie_part_path}/frameworks/native/",
+    "//commonlibrary/c_utils/base/include",
+  ]
+  sources = [
+    "${hicollie_part_path}/frameworks/native/test/xcollie_checker_test.cpp",
+    "xcollie_inner_test.cpp",
+  ]
+
+  configs = [ ":module_private_config" ]
+
+  deps = [
+    "${hicollie_part_path}/frameworks/native:libhicollie_source",
+    "//third_party/googletest:gtest_main",
+  ]
+  external_deps = [
+    "c_utils:utils",
+    "hicollie_native:libhicollie",
+    "hilog_native:libhilog",
+  ]
+}
+
 ###############################################################################
 group("unittest") {
   testonly = true
@@ -93,6 +135,8 @@ group("unittest") {
     # deps file
     ":HandlerCheckerTest",
     ":WatchdogUnitTest",
+    ":XCollieCheckerInterfaceUnitTest",
+    ":XCollieInnerTestUnitTest",
     ":XCollieUnitTest",
   ]
 }
