Feature: add sa, hdi, chipsetsdk type info
1) 为sa，hdi库增加shlib_type类型
2) 为chipsetsdk库增加innerapi_tags类型
3) innerapi_tags支持ndk

Signed-off-by: handyohos <zhangxiaotian@huawei.com>
Change-Id: Ib2d32de0a89d2f12312816fc7b1f7fab1d53330c

#I6DSU6

--- a/interfaces/native/innerkits/BUILD.gn
+++ b/interfaces/native/innerkits/BUILD.gn
@@ -21,6 +21,8 @@ config("libhicollie_pub_config") {
 ohos_shared_library("libhicollie") {
   public_configs = [ ":libhicollie_pub_config" ]
   deps = [ "//base/hiviewdfx/hicollie/frameworks/native:libhicollie_source" ]
+
+  innerapi_tags = [ "chipsetsdk" ]
   external_deps = [ "hilog_native:libhilog" ]
   part_name = "hicollie_native"
   subsystem_name = "hiviewdfx"
