Collect stacktrace in the watchdog process
Signed-off-by: MapleStory <zengzhi5@huawei.com>

--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -30,6 +30,7 @@ SERVICE_BLOCK:
   MODULE_NAME: {type: STRING, desc: failure module name}
   PROCESS_NAME: {type: STRING, desc: process name}
   MSG: {type: STRING, desc: event message}
+  STACK: {type: STRING, desc: stacktrace of service process}
 
 SERVICE_WARNING:
   __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: watchdog timeout}
@@ -39,3 +40,4 @@ SERVICE_WARNING:
   MODULE_NAME: {type: STRING, desc: failure module name}
   PROCESS_NAME: {type: STRING, desc: process name}
   MSG: {type: STRING, desc: event message}
+  STACK: {type: STRING, desc: stacktrace of service process}
