--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -41,6 +41,7 @@ ohos_source_set("libhicollie_source") {
   external_deps = [
     "c_utils:utils",
     "eventhandler:libeventhandler",
+    "faultloggerd:libbacktrace_local",
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
   ]
