--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -44,7 +44,7 @@ ohos_source_set("libhicollie_source") {
     "hisysevent_native:libhisysevent",
   ]
 
-  part_name = "hicollie_native"
+  part_name = "hicollie"
   subsystem_name = "hiviewdfx"
 }
 
