--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -37,7 +37,7 @@ ohos_unittest("XCollieUnitTest") {
   deps = [ "//third_party/googletest:gtest_main" ]
   external_deps = [
     "c_utils:utils",
-    "hicollie_native:libhicollie",
+    "hicollie:libhicollie",
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
   ]
@@ -53,7 +53,7 @@ ohos_unittest("WatchdogUnitTest") {
   external_deps = [
     "c_utils:utils",
     "eventhandler:libeventhandler",
-    "hicollie_native:libhicollie",
+    "hicollie:libhicollie",
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
   ]
