update name of hilog and hisysevent
Signed-off-by: jessica_2029 <weijiayi2@huawei.com>

--- a/frameworks/native/test/moduletest/common/BUILD.gn
+++ b/frameworks/native/test/moduletest/common/BUILD.gn
@@ -47,8 +47,8 @@ ohos_moduletest("XCollieTimeoutModuleTest") {
 
   external_deps = [
     "c_utils:utils",
-    "hilog_native:libhilog",
-    "hisysevent_native:libhisysevent",
+    "hilog:libhilog",
+    "hisysevent:libhisysevent",
   ]
 }
 
