--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -38,8 +38,8 @@ ohos_unittest("XCollieUnitTest") {
   external_deps = [
     "c_utils:utils",
     "hicollie:libhicollie",
-    "hilog_native:libhilog",
-    "hisysevent_native:libhisysevent",
+    "hilog:libhilog",
+    "hisysevent:libhisysevent",
   ]
 }
 
@@ -54,8 +54,8 @@ ohos_unittest("WatchdogUnitTest") {
     "c_utils:utils",
     "eventhandler:libeventhandler",
     "hicollie:libhicollie",
-    "hilog_native:libhilog",
-    "hisysevent_native:libhisysevent",
+    "hilog:libhilog",
+    "hisysevent:libhisysevent",
   ]
 }
 
