--- a/interfaces/native/innerkits/BUILD.gn
+++ b/interfaces/native/innerkits/BUILD.gn
@@ -26,7 +26,7 @@ ohos_shared_library("libhicollie") {
     "chipsetsdk",
     "platformsdk",
   ]
-  external_deps = [ "hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
   part_name = "hicollie"
   subsystem_name = "hiviewdfx"
 }
