Description:binder full enhances Signed-off-by: EurusHomles-zH <zhouhang65@huawei.com>

--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -41,3 +41,13 @@ SERVICE_WARNING:
   PROCESS_NAME: {type: STRING, desc: process name}
   MSG: {type: STRING, desc: event message}
   STACK: {type: STRING, desc: stacktrace of service process}
+
+BINDER_FULL:
+  __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: binder full}
+  PID: {type: INT32, desc: failure process pid}
+  TGID: {type: INT32, desc: failure process gid}
+  UID: {type: INT32, desc: failure process uid}
+  MODULE_NAME: {type: STRING, desc: failure module name}
+  PROCESS_NAME: {type: STRING, desc: process name}
+  MSG: {type: STRING, desc: event message}
+  STACK: {type: STRING, desc: stacktrace of service process}
