--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -18,6 +18,7 @@ config("hicollie_include") {
   include_dirs = [
     ".",
     "${hicollie_part_path}/interfaces/native/innerkits/include/xcollie",
+    "/foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
     "//commonlibrary/c_utils/base/include",
   ]
   if (is_ohos) {
@@ -37,6 +38,7 @@ ohos_source_set("libhicollie_source") {
   configs = [ ":hicollie_include" ]
 
   external_deps = [
+    "ipc:ipc_single",
     "c_utils:utils",
     "eventhandler:libeventhandler",
     "faultloggerd:libbacktrace_local",
