Description:foundation thread exceeds the baseline. Signed-off-by: EurusHomles-zH <zhouhang65@huawei.com>

--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -44,7 +44,7 @@ ohos_source_set("libhicollie_source") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
-    "ipc:ipc_single",
+    "ipc:ipc_core",
   ]
 
   part_name = "hicollie"
