--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -78,12 +78,48 @@ ohos_unittest("WatchdogInnerUnitTest") {
   ]
 }
 
+ohos_unittest("HandlerCheckerTest") {
+  module_out_path = module_output_path
+  sources = [ "handler_checker_test.cpp" ]
+
+  configs = [ ":module_private_config" ]
+
+  deps = [ "//third_party/googletest:gtest_main" ]
+  external_deps = [
+    "c_utils:utils",
+    "eventhandler:libeventhandler",
+    "ffrt:libffrt",
+    "hicollie:libhicollie",
+    "hilog:libhilog",
+    "hisysevent:libhisysevent",
+  ]
+}
+
+ohos_unittest("WatchdogTaskTest") {
+  module_out_path = module_output_path
+  sources = [ "watchdog_task_test.cpp" ]
+
+  configs = [ ":module_private_config" ]
+
+  deps = [ "//third_party/googletest:gtest_main" ]
+  external_deps = [
+    "c_utils:utils",
+    "eventhandler:libeventhandler",
+    "ffrt:libffrt",
+    "hicollie:libhicollie",
+    "hilog:libhilog",
+    "hisysevent:libhisysevent",
+  ]
+}
+
 ###############################################################################
 group("unittest") {
   testonly = true
   deps = [
     # deps file
+    ":HandlerCheckerTest",
     ":WatchdogInnerUnitTest",
+    ":WatchdogTaskTest",
     ":WatchdogUnitTest",
     ":XCollieUnitTest",
   ]
