Message: Shield Debugging Service Block application exits exit
Signed-off-by: yinhuiling <yinhuiling@huawei.com>

--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -44,6 +44,7 @@ ohos_source_set("libhicollie_source") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
+    "init:libbegetutil",
     "ipc:ipc_core",
   ]
 
