Fix the order of printed stack. Use the name of .so file instead of absolute path.
Signed-off-by: meteors117 <liyukun27@huawei.com>

--- a/frameworks/native/thread_sampler/BUILD.gn
+++ b/frameworks/native/thread_sampler/BUILD.gn
@@ -32,6 +32,11 @@ ohos_shared_library("libthread_sampler") {
 
   defines = []
 
+  innerapi_tags = [
+    "chipsetsdk_indirect",
+    "platformsdk_indirect",
+  ]
+
   part_name = "hicollie"
   subsystem_name = "hiviewdfx"
 }
