feat:优化gn格式编译报错
Signed-off-by: he-pian <2810516108@qq.com>

--- a/frameworks/native/test/moduletest/common/BUILD.gn
+++ b/frameworks/native/test/moduletest/common/BUILD.gn
@@ -48,6 +48,7 @@ ohos_moduletest("XCollieTimeoutModuleTest") {
     "c_utils:utils",
     "hilog:libhilog",
   ]
+  defines = []
   if (defined(global_parts_info.hiviewdfx_hisysevent)) {
     external_deps += [ "hisysevent:libhisysevent" ]
     defines += [ "HISYSEVENT_ENABLE" ]
