--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -42,6 +42,7 @@ ohos_unittest("XCollieUnitTest") {
     "c_utils:utils",
     "hilog:libhilog",
   ]
+  defines = []
   if (defined(global_parts_info.hiviewdfx_hisysevent)) {
     external_deps += [ "hisysevent:libhisysevent" ]
     defines += [ "HISYSEVENT_ENABLE" ]
@@ -63,15 +64,16 @@ ohos_unittest("WatchdogUnitTest") {
     "ffrt:libffrt",
     "hilog:libhilog",
   ]
-  if (defined(global_parts_info.hiviewdfx_hisysevent)) {
-    external_deps += [ "hisysevent:libhisysevent" ]
-    defines += [ "HISYSEVENT_ENABLE" ]
-  }
 
   defines = []
   if (defined(global_parts_info) &&
       defined(global_parts_info.notification_eventhandler)) {
     external_deps += [ "eventhandler:libeventhandler" ]
+  }
+
+  if (defined(global_parts_info.hiviewdfx_hisysevent)) {
+    external_deps += [ "hisysevent:libhisysevent" ]
+    defines += [ "HISYSEVENT_ENABLE" ]
   }
 }
 
@@ -90,10 +92,6 @@ ohos_unittest("WatchdogInnerUnitTest") {
     "ffrt:libffrt",
     "hilog:libhilog",
   ]
-  if (defined(global_parts_info.hiviewdfx_hisysevent)) {
-    external_deps += [ "hisysevent:libhisysevent" ]
-    defines += [ "HISYSEVENT_ENABLE" ]
-  }
 
   defines = []
   if (defined(global_parts_info) &&
@@ -104,6 +102,10 @@ ohos_unittest("WatchdogInnerUnitTest") {
       defined(global_parts_info.hiviewdfx_hiview)) {
     external_deps += [ "hiview:libucollection_client" ]
     defines += [ "HIVIEW_ENABLE" ]
+  }
+  if (defined(global_parts_info.hiviewdfx_hisysevent)) {
+    external_deps += [ "hisysevent:libhisysevent" ]
+    defines += [ "HISYSEVENT_ENABLE" ]
   }
 }
 
@@ -174,6 +176,7 @@ ohos_unittest("ThreadSamplerTest") {
     "hicollie:libhicollie",
     "hilog:libhilog",
   ]
+  defines = []
   if (defined(global_parts_info.hiviewdfx_hisysevent)) {
     external_deps += [ "hisysevent:libhisysevent" ]
     defines += [ "HISYSEVENT_ENABLE" ]
