--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -47,7 +47,7 @@ ohos_source_set("libhicollie_source") {
   ]
 
   defines = []
-  if (!is_asan) {
+  if (use_musl && !is_asan) {
     defines += [ "HOOK_ENABLE" ]
   }
 
