--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -13,7 +13,7 @@
 
 import("//build/test.gni")
 
-module_output_path = "hiviewdfx/hicollie"
+module_output_path = "hicollie/hicollie"
 hicollie_part_path = "//base/hiviewdfx/hicollie"
 
 ###############################################################################
