--- a/interfaces/ndk/test/unittest/BUILD.gn
+++ b/interfaces/ndk/test/unittest/BUILD.gn
@@ -13,7 +13,7 @@
 
 import("//build/test.gni")
 
-module_output_path = "hiviewdfx/hicollie"
+module_output_path = "hicollie/hicollie"
 ohos_unittest("hicollie_test") {
   module_out_path = module_output_path
   include_dirs = [
