--- a/frameworks/native/test/moduletest/common/BUILD.gn
+++ b/frameworks/native/test/moduletest/common/BUILD.gn
@@ -42,10 +42,11 @@ ohos_moduletest("XCollieTimeoutModuleTest") {
 
   configs = [ ":module_private_config" ]
 
-  deps = [ "//third_party/googletest:gtest_main" ]
+  deps = []
 
   external_deps = [
     "c_utils:utils",
+    "googletest:gtest_main",
     "hilog:libhilog",
   ]
   defines = []
