--- a/interfaces/ndk/test/unittest/BUILD.gn
+++ b/interfaces/ndk/test/unittest/BUILD.gn
@@ -25,7 +25,11 @@ ohos_unittest("hicollie_test") {
   deps = [
     "../../../native/innerkits:libhicollie",
     "../../../ndk:ohhicollie",
-    "//third_party/googletest:gtest_main",
+  ]
+
+  external_deps = [
+    "c_utils:utils",
+    "googletest:gtest_main",
   ]
 }
 
