--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -52,3 +52,25 @@ IPC_FULL:
   PROCESS_NAME: {type: STRING, desc: process name}
   MSG: {type: STRING, desc: event message}
   STACK: {type: STRING, desc: stacktrace of service process}
+
+MAIN_THREAD_JANK:
+  __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: main thread jank}
+  BUNDLE_VERSION: {type: STRING, desc: bundle version}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  BEGIN_TIME: {type: INT64, desc: begin time}
+  END_TIME: {type: INT64, desc: end time}
+  EXTERNAL_LOG: {type: STRING, desc: external log}
+  STACK: {type: STRING, desc: stack}
+  JANK_LEVEL: {type: INT32, desc: jank level}
+  THREAD_NAME: {type: STRING, desc: thread name}
+  FOREGROUND: {type: BOOL, desc: foreground}
+  LOG_TIME: {type: INT64, desc: log time}
+  APP_START_JIFFIES_TIME: {type: INT64, desc: app start jiffies time}
+  HEAVIEST_STACK: {type: STRING, desc: heaviest stack}
+  LOG_OVER_LIMIT: {type: BOOL, desc: log over limit}
+
+SCROLL_TIMEOUT:
+  __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: scroll timeout}
+  PROCESS_NAME: {type: STRING, desc: process name}
+  EXTERNAL_LOG: {type: STRING, desc: external log}
+  LOG_OVER_LIMIT: {type: BOOL, desc: log over limit}
